05-kubernetes_eks/fargate/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-fargate
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-deployment-fargate
