05-kubernetes_eks/fargate/np.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-fargate-np
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-deployment-fargate
